--- a/style.css
+++ b/style.css
@@ -4,3 +4,26 @@
     font-weight: 400;
     font-style: normal;
 }
+
+h2 {
+  position: relative;
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding: 1rem 0;
+  margin: 3rem 0 2.5rem;
+  border-bottom: 2px solid gray; /* blue-500 */
+  text-align:center
+}
+
+h2::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -20px;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid gray;
+}
